<resources>
    <string name="app_name">TravelAgency</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_client">ClientActivity</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="title_activity_client_info">ClientInfoActivity</string>
    <string name="title_activity_seach">SeachActivity</string>
    <string name="email_hint">e-mail</string>
    <string name="password_hint">password</string>
    <string name="select_date_button">pick a date</string>
    <string name="select_date">Please select a departure date</string>
    <string name="switch_text">Direct Flights Only</string>
    <string name="search">Search</string>
    <string name="search_hint">Enter the origin, destination, departure date and
        departure time to search for available flights itineraries.</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_display_itinerary">DisplayItineraryActivity</string>
    <string name="title_activity_view_client">ViewClientActivity</string>
    <string name="title_activity_view_booked">viewBookedActivity</string>
    <string name="title_activity_edit_flight">EditFlightActivity</string>
    <string name="flight_number">Flight Number:</string>
    <string name="departure">Departure Time:</string>
    <string name="arrival">Arrival Time:</string>
    <string name="airline">Airline:</string>
    <string name="origin">Origin:</string>
    <string name="destination">Destination:</string>
    <string name="price">Price:</string>
    <string name="number_seats">Number Seats:</string>
    <string name="last_name">Last Name:</string>
    <string name="first_name">First Name:</string>
    <string name="email">Email:</string>
    <string name="address">Address:</string>
    <string name="card_number">Card Number:</string>
    <string name="expiry_date">Expiry Date:</string>
    <string name="save_change">Save Change</string>
    <string name="upload_hint">File Name</string>
    <string name="edit_flight_hint">flight #</string>
    <string name="book">Book</string>
    <string name="un_book">UnBook</string>
    <string name="display_cost">Display By Cost</string>
    <string name="display_time">Display By Time</string>
    <string name="upload_client">Upload Client</string>
    <string name="upload_flight">Upload Flight</string>
    <string name="to">To</string>
    <string name="from">From</string>
    <string name="date">Date</string>
    <string name="title_activity_upload_flights">uploadFlightsActivity</string>
    <string name="title_activity_upload_clients">uploadClientsActivity</string>
    <string name="enter_origin">Please enter a origin.</string>
    <string name="enter_des">Please enter a destination.</string>
    <string name="enter_date">Please select a date.</string>
    <string name="enter_email">Please enter a client email.</string>
    <string name="client_not_found">Client not found.</string>
    <string name="log_in">Log In</string>
    <string name="image">image</string>
    <string name="hint"> </string>
</resources>
