<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="cs.b07.travelagency.ClientInfoActivity"
    android:background="@drawable/background"
    tools:showIn="@layout/activity_client_info">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_name"
        android:id="@+id/textView5"
        android:layout_alignBaseline="@+id/last_name_field"
        android:layout_alignBottom="@+id/last_name_field"
        android:layout_toStartOf="@+id/address_field" />

    <EditText
        android:hint="@string/hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/last_name_field"
        android:textColor="@color/dark_blue"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/textView5"
        android:layout_alignStart="@+id/address_field" />

    <EditText
        android:hint="@string/hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/first_name_field"
        android:textColor="@color/dark_blue"
        android:layout_below="@+id/last_name_field"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/last_name_field" />

    <EditText
        android:hint="@string/hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/email_field"
        android:textColor="@color/dark_blue"
        android:layout_below="@+id/first_name_field"
        android:layout_alignEnd="@+id/first_name_field"
        android:layout_alignStart="@+id/first_name_field" />

    <EditText
        android:hint="@string/hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/address_field"
        android:layout_below="@+id/email_field"
        android:textColor="@color/dark_blue"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/textView9" />

    <EditText
        android:hint="@string/hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/card_number_field"
        android:textColor="@color/dark_blue"
        android:layout_below="@+id/address_field"
        android:layout_alignEnd="@+id/address_field"
        android:layout_toEndOf="@+id/textView9" />

    <EditText
        android:hint="@string/hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="datetime"
        android:ems="10"
        android:id="@+id/expiry_date_field"
        android:textColor="@color/dark_blue"
        android:layout_below="@+id/card_number_field"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/card_number_field" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_name"
        android:id="@+id/textView6"
        android:layout_alignBaseline="@+id/first_name_field"
        android:layout_alignBottom="@+id/first_name_field"
        android:layout_toStartOf="@+id/first_name_field" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:id="@+id/textView7"
        android:layout_alignBaseline="@+id/email_field"
        android:layout_alignBottom="@+id/email_field"
        android:layout_toStartOf="@+id/email_field" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:id="@+id/textView8"
        android:layout_alignBaseline="@+id/address_field"
        android:layout_alignBottom="@+id/address_field"
        android:layout_toStartOf="@+id/address_field" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/card_number"
        android:id="@+id/textView9"
        android:layout_alignBaseline="@+id/card_number_field"
        android:layout_alignBottom="@+id/card_number_field"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/expiry_date"
        android:id="@+id/textView10"
        android:layout_alignBaseline="@+id/expiry_date_field"
        android:layout_alignBottom="@+id/expiry_date_field"
        android:layout_alignStart="@+id/textView6" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_change"
        android:id="@+id/saveClientChanges"
        android:onClick="editClient"
        android:layout_below="@+id/expiry_date_field"
        android:layout_alignEnd="@+id/expiry_date_field" />

</RelativeLayout>
