<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="cs.b07.travelagency.ViewClientActivity"
    tools:showIn="@layout/activity_view_client"
    android:background="@drawable/background">


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:textColor="@color/dark_blue"
        android:hint="@string/email"
        android:id="@+id/client_field"
        android:layout_alignParentTop="true"
        android:layout_marginTop="66dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:id="@+id/search_client"
        android:layout_below="@+id/client_field"
        android:layout_centerHorizontal="true"
        android:onClick="searchClient"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_email"
        android:textColor="@color/gray_blue"
        android:id="@+id/display_client"
        android:layout_below="@+id/search_client"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp" />
</RelativeLayout>
